[package]
name = "gcal-pagerduty"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"]}
oauth2 = "4.2.3"
tokio = {version = "1.20.0", features = ["full"]}
chrono = "0.4.22"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.19"
clap = {version="3.2.17", features = ["derive"]}
actix-web = "4"
anyhow = "1.0.62"
tabled = "0.8.0"
rand = "0.8.5"
shuffle = "0.1.7"